# stow-squid

./: Cargo.toml  README.md  announcements.json  example-config.toml
src/: drop.rs  main.rs  verb.rs
