[package]
name = "stow-squid"
authors = ["jakeroggenbuck <jakeroggenbuck2@gmail.com>"]
version = "0.1.1"
license = "MIT"
edition = "2018"
description = "Stow your dotfiles"
homepage = "https://github.com/JakeRoggenbuck/stow-squid"
repository = "https://github.com/JakeRoggenbuck/stow-squid"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["config", "dotfiles"]

[dependencies]
toml = "0.5.8"
home = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3", default-features = false }
